--- a/css/src/_icons.scss
+++ b/css/src/_icons.scss
@@ -17,7 +17,8 @@
 
 	.intro {
 		width: 80%;
-		
+		padding-left: 20px;
+
 		@include respond-to( 1024px ) { 
 			width: 85%;
 			padding-left: 10px;
@@ -29,6 +30,10 @@
 
 		p {
 			padding: 0;
+
+			@include respond-to( 1220px ) {
+				padding: 10px 0;
+			}
 		}
 	}
 }
